@@ -28,6 +28,7 @@ extern "C" {
 #define E_DECODE	22	/* Error in decoding into Unicode */
 #define E_EOFS		23	/* EOF in triple-quoted string */
 #define E_EOLS		24	/* EOL in single-quoted string */
+#define E_LINECONT	25	/* Unexpected characters after a line continuation */
 
 #ifdef __cplusplus
 }
